# require-kit

./: .coverage  .gitignore  BACKLOG-IMPLEMENTATION-ORDER.md  CLAUDE.md  CNAME  DELETION-PLAN.md  DOCS-SETUP.md  EXTRACTION-SUMMARY.md  IMPLEMENTATION-SUMMARY-REQ-003A.md  PRESENTATION-README.md  README.md  REQ-002E-COMPLETION-REPORT.md  SHARED-INSTALLER-STRATEGY.md  TASK-030-SUITABILITY-ANALYSIS.md  TASK-030-UPDATE-SUMMARY.md  TASK-030E-1-ANALYSIS-SUMMARY.md  TASK-030E-1-EARS-REQUIREMENTS.md  TASK-030E-1-QUICK-REFERENCE.md  TASK-030E-1-REQUIREMENTS-ANALYSIS.md  TASK-030E-SPLIT-SUMMARY.md  TASK-035-CORRECTED-ANALYSIS.md  TASK-035-REQUIREKIT-IMPLEMENTATION-SUMMARY.md  TASK-035-REQUIREKIT-SIMPLIFIED-ANALYSIS.md  TASK-PD-RK04-COMPLETION.md  ai-engineer.sln  coverage-task006.json  coverage.json  coverage_day3.json  coverage_integration.json  coverage_task_003e.json  coverage_task_003e_final.json  mkdocs.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-docs.txt  requirements.txt  test-results.xml  test-task-complete-subfolder.sh  (+9 more)
.claude/: CLAUDE.md  TASK-WORKFLOW-QUICK-REFERENCE-V2.md  TASK-WORKFLOW-QUICK-REFERENCE.md  settings.json
.guardkit/: bootstrap_state.json  graphiti.yaml
DEVELOPMENT/: README.md
agentic-flow/: README.md  SETUP.md  install.sh
coverage/: coverage-final.json  icon-converter.ts.html  index.html  lcov.info
docs/: CONDUCTOR-SETUP-COMPLETE.md  FULL-REVIEW-MODE-USAGE.md  INTEGRATION-GUIDE.md  MODEL-ASSIGNMENT-MATRIX.md  PLAN-REVIEW-QUICKSTART.md  PROJECT-UNIFIED-WORKFLOW-IMPLEMENTATION.md  PROJECT_STRUCTURE_GUIDE.md  (+8 more)
(+1307 files in other folders)
