[project]
name = "require-kit"
version = "1.0.0"
description = "Requirements engineering and BDD for Agentecflow"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Require-Kit Contributors"}
]
keywords = ["requirements", "ears", "bdd", "gherkin", "agentecflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/requirekit/require-kit"
Documentation = "https://requirekit.github.io/require-kit/"
Repository = "https://github.com/requirekit/require-kit"
Issues = "https://github.com/requirekit/require-kit/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
